[~] Fix: re-adding hidden columns => popup overflow #2291

--- a/roles/ui/files/FWO.UI/wwwroot/css/site.css
+++ b/roles/ui/files/FWO.UI/wwwroot/css/site.css
@@ -480,7 +480,6 @@ thead {
 
 .table-responsive:has(.popover, .bs-popover-bottom, .show) div {
     overflow-x: visible;
-    transform: none !important;
     inset: unset !important;
 }
 
